--- a/testimonials.css
+++ b/testimonials.css
@@ -23,9 +23,9 @@
     border-radius: 10px;
     padding: 2rem 1rem;
     transition: 0.5s;
-    left: calc(50% - 220px);
+    left: calc(50% - 200px);
     /* left: 50%; */
-    transform: translateX(-50%);
+    /* transform: translateX(-50%); */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -66,4 +66,28 @@
 #testimonial_next {
     left: unset;
     right: -50px;
+}
+
+@media only screen and (max-width:329px) {
+    .testimonial_item {
+        width: 250px;
+        height: 380px;
+        gap: 1rem;
+        left: calc(50% - 125px);
+    }
+
+    #testimonial_next,
+    #testimonial_prev {
+        top: 95%;
+    }
+}
+
+
+@media only screen and (min-width:330px) and (max-width:420px) {
+    .testimonial_item {
+        width: 300px;
+        height: 350px;
+        gap: 1rem;
+        left: calc(50% - 150px);
+    }
 }
